src/apps/angular-reference/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  namespace: angular
  labels:
    app: angular
spec:
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: argocdtest.azurecr.io/github-evry-bergen/toolbox-reference-angular:develop-2fbc38b1-11 # {"$imagepolicy": "flux-system:angular"}
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080 # it doesnt really matter - port-forward or service should point to port 80 where nginx is listening
      imagePullSecrets:
        - name: acr-auth
