src/apps/angular-reference/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: angular
  namespace: angular
spec:
  selector:
    app: angular
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    name: angular
